--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -10,6 +10,9 @@ block.shar-multi-drill.details = 많은 도움과 아이디어, 기능 추가와
 block.shar-shield-wall.name = 방어막 벽
 block.shar-shield-wall.description = hp를 보호해줄 수 있는 방어막을 가진 벽입니다. 방어막 리젠 필드의 영향을 받습니다.
 block.shar-shield-wall.details = 릴리즈하기 전에 간단히 만듬.
+block.shar-multi-crafterator.name = 다중 공장발전기
+block.shar-multi-crafterator.description =
+block.shar-multi-crafterator.detail =
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
 bar.shield = 방어막
