added Stats, clean up, fix something more and more

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -16,3 +16,9 @@ block.shar-multi-crafterator.detail =
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
 bar.shield = 방어막
+stat.shar.base-t = 주 포탑
+stat.shar.mini-t = 보조 포탑
+stat.shar.ammo-shot = 발사 당 탄약 수
+stat.shar.chargeTime = 충전 시간
+stat.shar.power = 전력
+stat.shar.seconds = 초
