tractor go brrrrr

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -22,3 +22,4 @@ stat.shar.ammo-shot = 발사 당 탄약 수
 stat.shar.chargeTime = 충전 시간
 stat.shar.power = 전력
 stat.shar.seconds = 초
+stat.shar.damage = {0} /초
