main bullet is op

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,18 +1,32 @@
 block.shar-balkan.name = 발칸
-block.shar-balkan.description = 다양한 탄환을 발사하기 위한 실험용 프로토타입 포탑.
-block.shar-balkan.details = 아직 하나만 있음
+block.shar-balkan.description = 다양한 탄환을 발사하기 위한 실험용 프로토타입 포탑입니다.
+block.shar-balkan.details = 아직 하나만 있다
 block.shar-adapt-drill.name = 적응성 드릴 
-block.shar-adapt-drill.description = 다양한 친화성으로 효율을 가속할 수 있는 친화성 선택형 드릴.
+block.shar-adapt-drill.description = 다양한 친화성으로 효율을 가속할 수 있는 친화성 선택형 드릴입니다.
 block.shar-adapt-drill.details = 제작 시간이 비교적 짧아서 다른 콘텐츠에 비해 퀄리티가 떨어진다.
 block.shar-multi-drill.name = 다중 드릴
-block.shar-multi-drill.description = 캘 수 있는 모든 광물들을 특정 주기마다 채광하는 드릴.
+block.shar-multi-drill.description = 캘 수 있는 모든 광물들을 특정 주기마다 채광하는 드릴입니다.
 block.shar-multi-drill.details = 많은 도움과 아이디어, 기능 추가와 삭제가 거듭된 작품. 도와준 분들: mal와 sk, qmel
 block.shar-shield-wall.name = 방어막 벽
-block.shar-shield-wall.description = hp를 보호해줄 수 있는 방어막을 가진 벽입니다. 방어막 리젠 필드의 영향을 받습니다.
-block.shar-shield-wall.details = 릴리즈하기 전에 간단히 만듬.
+block.shar-shield-wall.description = hp를 보호해줄 수 있는 방어막을 가진 벽입니다. 2초 동안 피해를 입지 않는다면 재생합니다.
+block.shar-shield-wall.details = 약간 사기다
 block.shar-multi-crafterator.name = 다중 공장발전기
-block.shar-multi-crafterator.description =
-block.shar-multi-crafterator.detail =
+block.shar-multi-crafterator.description = 공장 레시피를 선택할 수 있는 공장 & 발전기입니다.
+block.shar-multi-crafterator.detail = 군바하신 영감님의 걸작 중 하나
+
+block.shar-multi-i.name = 집합체
+block.shar-multi-i.description = 큰 포탑 위에 작은 포탑들이 장착된 집합형 다중 포탑입니다.
+block.shar-multi-i.details = meep, PM 에서 양도받은 포탑
+block.shar-conductron.name = 도체자
+block.shar-conductron.description = 두번째 다중 포탑. 레이저와 전격, 가속탄을 발사합니다.
+block.shar-conductron.details = 스프라이터: mal
+block.shar-technicus.name = 기술자
+block.shar-technicus.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
+block.shar-technicus.details = 직접 조종해서 발사할 수 없다
+block.shar-clinicus.name = 클리니쿠스
+block.shar-clinicus.description = 치료 포탑. 유닛 치료 레이저와 3점사 치료 빔을 발사합니다.
+block.shar-clinicus.details = 스프라이터: MasterNo2!
+
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
 bar.shield = 방어막
