--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -24,8 +24,11 @@ block.shar-technicus.name = 기술자
 block.shar-technicus.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
 block.shar-technicus.details = 직접 조종해서 발사할 수 없다
 block.shar-clinicus.name = 클리니쿠스
-block.shar-clinicus.description = 치료 포탑. 유닛 치료 레이저와 3점사 치료 빔을 발사합니다.
-block.shar-clinicus.details = 스프라이터: MasterNo2!
+block.shar-clinicus.description = 치료 포탑. 유닛 치료 레이저와 3점사 치료 빔, 작은 보조 구조물을 발사합니다.
+block.shar-clinicus.details = 스프라이터: MasterNo2, ssim(탄환)
+block.shar-asclepius.name = 아스클레피오스
+block.shar-asclepius.description = 2티어 치료 포탑. 더 강력한 레이저와 더 많은 치료 빔을 발사하고, 미사일을 발사합니다. 더 크고 더 많은 보조 구조물을 발사합니다.
+block.shar-asclepius.details = 스프라이터: MasterNo2, ssim(탄환)
 
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
