--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -20,9 +20,9 @@ block.shar-multi-i.details = meep, PM 에서 양도받은 포탑
 block.shar-conductron.name = 도체자
 block.shar-conductron.description = 두번째 다중 포탑. 레이저와 전격, 가속탄을 발사합니다.
 block.shar-conductron.details = 스프라이터: mal
-block.shar-technicus.name = 기술자
-block.shar-technicus.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
-block.shar-technicus.details = 직접 조종해서 발사할 수 없다
+block.shar-trinity.name = 기술자
+block.shar-trinity.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
+block.shar-trinity.details = 직접 조종해서 발사할 수 없다
 block.shar-clinicus.name = 클리니쿠스
 block.shar-clinicus.description = 치료 포탑. 유닛 치료 레이저와 3점사 치료 빔, 작은 보조 구조물을 발사합니다.
 block.shar-clinicus.details = 스프라이터: MasterNo2, ssim(탄환)
