--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -30,6 +30,10 @@ block.shar-asclepius.name = 아스클레피오스
 block.shar-asclepius.description = 2티어 치료 포탑. 더 강력한 레이저와 더 많은 치료 빔을 발사하고, 미사일을 발사합니다. 더 크고 더 많은 보조 구조물을 발사합니다.
 block.shar-asclepius.details = 스프라이터: MasterNo2, ssim(탄환)
 
+block.shar-armedNucleus.name = 중무장 코어: 핵
+block.shar-armedNucleus.description = 4개의 레이저 포탑과 4개의 헤일을 가진 코어입니다. 탄약 공급이 필요합니다.
+block.shar-armedNucleus.details = ???: 더 이상의 플레어 러쉬는 없다.
+
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
 bar.shield = 방어막
