--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -30,9 +30,12 @@ block.shar-asclepius.name = 아스클레피오스
 block.shar-asclepius.description = 2티어 치료 포탑. 더 강력한 레이저와 더 많은 치료 빔을 발사하고, 미사일을 발사합니다. 더 크고 더 많은 보조 구조물을 발사합니다.
 block.shar-asclepius.details = 스프라이터: MasterNo2, ssim(탄환)
 
-block.shar-armedNucleus.name = 중무장 코어: 핵
-block.shar-armedNucleus.description = 4개의 레이저 포탑과 4개의 헤일을 가진 코어입니다. 탄약 공급이 필요합니다.
+block.shar-armedNucleus.name = 중무장 코어: 핵심
+block.shar-armedNucleus.description = 4개의 레이저 포탑과 4개의 헤일을 가진 핵심 코어입니다. 탄약과 전력 공급이 필요합니다. \n [red]더 작은 코어가 필요합니다.[]
 block.shar-armedNucleus.details = ???: 더 이상의 플레어 러쉬는 없다.
+block.shar-armedFoundation.name = 중무장 코어: 기반
+block.shar-armedFoundation.description = 1개의 수리 레이저 포탑과 4개의 레이저 볼트 포탑을 가진 기반 코어입니다. 전력 공급이 필요합니다. \n [red]더 작은 코어가 필요합니다.[]
+block.shar-armedFoundation.details = heal go brr
 
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
@@ -45,3 +48,4 @@ stat.shar.power = 전력
 stat.shar.seconds = 초
 stat.shar.damage = {0} /초
 stat.shar.range = {0} 칸
+stat.shar.targetsBullet = 탄환 조준
