--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -20,7 +20,7 @@ block.shar-multi-i.details = meep, PM 에서 양도받은 포탑
 block.shar-conductron.name = 도체자
 block.shar-conductron.description = 두번째 다중 포탑. 레이저와 전격, 가속탄을 발사합니다.
 block.shar-conductron.details = 스프라이터: mal
-block.shar-trinity.name = 기술자
+block.shar-trinity.name = 트리니티
 block.shar-trinity.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
 block.shar-trinity.details = 직접 조종해서 발사할 수 없다
 block.shar-clinicus.name = 클리니쿠스
