added reload & skill bar clean up minor bugfix

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -49,3 +49,5 @@ stat.shar.seconds = 초
 stat.shar.damage = {0} /초
 stat.shar.range = {0} 칸
 stat.shar.targetsBullet = 탄환 조준
+stat.shar-reload = 재장전 시간: 
+stat.shar-skillReload = 스킬 횟수: 
