added skill bar, removed annotation

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -37,9 +37,6 @@ block.shar-armedFoundation.name = 중무장 코어: 기반
 block.shar-armedFoundation.description = 1개의 수리 레이저 포탑과 4개의 레이저 볼트 포탑을 가진 기반 코어입니다. 전력 공급이 필요합니다. \n [red]더 작은 코어가 필요합니다.[]
 block.shar-armedFoundation.details = heal go brr
 
-bar.attribute = {1} 친화성 : + {0}%
-bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
-bar.shield = 방어막
 stat.shar.base-t = 주 포탑
 stat.shar.mini-t = 보조 포탑
 stat.shar.ammo-shot = 발사 당 탄약 수
@@ -49,5 +46,10 @@ stat.shar.seconds = 초
 stat.shar.damage = {0} /초
 stat.shar.range = {0} 칸
 stat.shar.targetsBullet = 탄환 조준
-stat.shar-reload = 재장전 시간: 
-stat.shar-skillReload = 스킬 횟수: 
+
+bar.attribute = {1} 친화성 : + {0}%
+bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
+bar.shield = 방어막
+bar.shar-reload = 재장전: {0}%
+bar.shar-charge = 충전: {0}%
+bar.shar-skillReload = 스킬 횟수: 
