added new status effect into balkan skill

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -37,6 +37,8 @@ block.shar-armedFoundation.name = 중무장 코어: 기반
 block.shar-armedFoundation.description = 1개의 수리 레이저 포탑과 4개의 레이저 볼트 포탑을 가진 기반 코어입니다. 전력 공급이 필요합니다. \n [red]더 작은 코어가 필요합니다.[]
 block.shar-armedFoundation.details = heal go brr
 
+status.shar-over-freezing.name = 과냉각
+
 stat.shar.base-t = 주 포탑
 stat.shar.mini-t = 보조 포탑
 stat.shar.ammo-shot = 발사 당 탄약 수
