--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,6 +1,6 @@
 block.shar-balkan.name = 발칸
 block.shar-balkan.description = 다양한 탄환을 발사하기 위한 실험용 프로토타입 포탑입니다.
-block.shar-balkan.details = 아직 하나만 있다
+block.shar-balkan.details =
 block.shar-adapt-drill.name = 적응성 드릴 
 block.shar-adapt-drill.description = 다양한 친화성으로 효율을 가속할 수 있는 친화성 선택형 드릴입니다.
 block.shar-adapt-drill.details = 제작 시간이 비교적 짧아서 다른 콘텐츠에 비해 퀄리티가 떨어진다.
@@ -54,7 +54,7 @@ stat.shar.overfreezing-name = 과냉각 필드
 stat.shar.burstshoot-description = 가속탄을 랜덤하게 난사합니다. 
 stat.shar.overfreezing-description = 과냉각 필드를 전개합니다.
 stat.shar.burstamount = [lightgray]탄환 수:[] {0}
-stat.shar.fieldstatus = [lightgray]필드 상태이상:[] {0}
+stat.shar.fieldstatus = [lightgray]필드 상태이상:[]
 stat.shar.shieldreceive-name = 보호막 부여 필드
 stat.shar.shieldreceive-description = 주변 유닛에 보호막을 부여합니다, [red]세이브 파일에 저장되지 않습니다[].\n보호막은 유닛 능력으로써 작동됩니다.
 stat.shar.fireforce-name = 보호막 구조물
