--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -19,7 +19,7 @@ block.shar-multi-i.description = 큰 포탑 위에 작은 포탑들이 장착된
 block.shar-multi-i.details = meep, PM 에서 양도받은 포탑
 block.shar-conductron.name = 도체자
 block.shar-conductron.description = 두번째 다중 포탑. 레이저와 전격, 가속탄을 발사합니다.
-block.shar-conductron.details = 스프라이터: mal
+block.shar-conductron.details = 이름 추천받아요.. 너무 어색함...\n스프라이터: mal
 block.shar-trinity.name = 트리니티
 block.shar-trinity.description = 서포터 포탑. 유닛 견인/탄환 요격/유닛 치료 레이저를 발사합니다.
 block.shar-trinity.details = 직접 조종해서 발사할 수 없다
@@ -55,6 +55,8 @@ stat.shar.burstshoot-description = 가속탄을 랜덤하게 난사합니다.
 stat.shar.overfreezing-description = 과냉각 필드를 전개합니다.
 stat.shar.burstamount = [lightgray]탄환 수:[] {0}
 stat.shar.fieldstatus = [lightgray]필드 상태이상:[]
+stat.shar.receiveRange = [lightgray]부여 사거리:[] {0}
+stat.shar.constructamount = [lightgray]구조물 수:[] {0}
 stat.shar.shieldreceive-name = 보호막 부여 필드
 stat.shar.shieldreceive-description = 주변 유닛에 보호막을 부여합니다, [red]세이브 파일에 저장되지 않습니다[].\n보호막은 유닛 능력으로써 작동됩니다.
 stat.shar.fireforce-name = 보호막 구조물
