finish variable processor

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,3 +1,7 @@
+block.shar-variable-processor.name = 가속 프로세서
+block.shar-variable-processor.description = 실행문 처리 속도를 가속시키는 프로세서입니다. 2000배까지 지원합니다.
+block.shar-variable-processor.details = h
+
 block.shar-balkan.name = 발칸
 block.shar-balkan.description = 다양한 탄환을 발사하기 위한 실험용 프로토타입 포탑입니다.
 block.shar-balkan.details =
@@ -36,6 +40,13 @@ block.shar-armedNucleus.details = ???: 더 이상의 플레어 러쉬는 없다.
 block.shar-armedFoundation.name = 중무장 코어: 기반
 block.shar-armedFoundation.description = 1개의 수리 레이저 포탑과 4개의 레이저 볼트 포탑을 가진 기반 코어입니다. 전력 공급이 필요합니다. \n [red]더 작은 코어가 필요합니다.[]
 block.shar-armedFoundation.details = heal go brr
+
+unit.shar-momo.name = 모모
+unit.shar-momo.description =
+unit.shar-momo.details =
+unit.shar-monopoly.name = 모노폴리
+unit.shar-monopoly.description =
+unit.shar-monopoly.details =
 
 status.shar-over-freezing.name = 과냉각
 
