updated scroll bar

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -86,3 +86,5 @@ bar.shield = 방어막
 bar.shar-reload = 재장전: {0}%
 bar.shar-charge = 충전: {0}%
 bar.shar-skillReload = 스킬 횟수: 
+
+ui.itemnotfound = [red]찾을 수 없음.[]
