--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -88,3 +88,6 @@ bar.shar-charge = 충전: {0}%
 bar.shar-skillReload = 스킬 횟수: 
 
 ui.itemnotfound = [red]찾을 수 없음.[]
+
+shar-stat.health = 체력: {0}
+shar-stat.shield = 방어막: {0}
