--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -91,3 +91,4 @@ ui.itemnotfound = [red]찾을 수 없음.[]
 
 shar-stat.health = 체력: {0}
 shar-stat.shield = 방어막: {0}
+shar-stat.payloadCapacity = 화물: {0} / {1}
