v137 migration: skill refactoring - to one class

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -73,12 +73,12 @@ stat.shar.burstamount = [lightgray]탄환 수:[] {0}
 stat.shar.fieldstatus = [lightgray]필드 상태이상:[]
 stat.shar.receiveRange = [lightgray]부여 사거리:[] {0}
 stat.shar.constructamount = [lightgray]구조물 수:[] {0}
-stat.shar.shieldreceive-name = 보호막 부여 필드
-stat.shar.shieldreceive-description = 주변 유닛에 보호막을 부여합니다, [red]세이브 파일에 저장되지 않습니다[].\n보호막은 유닛 능력으로써 작동됩니다.
-stat.shar.fireforce-name = 보호막 구조물
-stat.shar.fireforce-description = 보호막을 가진 구조물을 발사합니다.\n세그먼트에 의해 파괴될 수 있습니다.
-stat.shar.fireassault-name = 전투 구조물
-stat.shar.fireassault-description = 360도로 돌아가며 사방에 방화탄을 발사하는 구조물을 발사합니다.\n세그먼트에 의해 파괴될 수 있습니다.
+stat.shar.shieldreceive.name = 보호막 부여 필드
+stat.shar.shieldreceive.description = 주변 유닛에 보호막을 부여합니다, [red]세이브 파일에 저장되지 않습니다[].\n보호막은 유닛 능력으로써 작동됩니다.
+stat.shar.fireforce.name = 보호막 구조물
+stat.shar.fireforce.description = 보호막을 가진 구조물을 발사합니다.\n세그먼트에 의해 파괴될 수 있습니다.
+stat.shar.fireassault.name = 전투 구조물
+stat.shar.fireassault.description = 360도로 돌아가며 사방에 방화탄을 발사하는 구조물을 발사합니다.\n세그먼트에 의해 파괴될 수 있습니다.
 
 bar.attribute = {1} 친화성 : + {0}%
 bar.drillspeeditem = {1} 드릴 속도: {0}/{2}s
